[project]
name = "sql-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.3.3",
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "groq>=0.22.0",
    "mcp>=1.6.0",
    "mcp-sql-server>=0.1.0",
    "openai>=1.75.0",
    "streamlit>=1.44.1",
]
